# rs-cfg2hcl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  config.toml  dist-workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: attach-checksum.yml  prune-releases.yml  release.yml
docs/: Architecture.md  Build.md  Readme.md
presets/: CIS-GCP-Foundation-4.0.yaml  discovery-config.yaml  essential-contacts-organization-1.0.yaml  organization-budget.yaml
presets/group-models/: s1-group-definitions-1.0.yaml  s1-group-names-1.0.yaml
presets/group-models/default-gcp-groups/: gcp-hybrid-connectivity-admins.yaml  gcp-logging-monitoring-viewers.yaml  gcp-organization-admins.yaml  gcp-vpc-network-admins.yaml
presets/security-group-models/: s1-group-definitions-1.0.yaml  s1-group-names-1.0.yaml  s1-group-permissions-1.0.yaml
presets/security-group-models/default-gcp-groups/: gcp-billing-admins.yaml  gcp-developers.yaml  gcp-devops.yaml  gcp-logging-monitoring-admins.yaml  gcp-security-admins.yaml
scripts/: inspect_schema.py  update_discovery_config.py
src/: bootstrap.rs  config.rs  discovery.rs  include_processor.rs  main.rs  schema.rs  state_migration.rs  template.rs  transpiler.rs
xtask/: Cargo.toml
xtask/src/: main.rs
