[package]
name = "cfg2hcl"
version = "0.6.0"
edition = "2021"
authors = ["Thomas Jirsch"]
description = "A tool to transpile compact YAML infrastructure definitions into OpenTofu/Terraform HCL. Bootstrap and migrate gcp organization."
license = "MIT"
repository = "https://github.com/tjirsch/rs-cfg2hcl"
homepage = "https://github.com/tjirsch/rs-cfg2hcl"
readme = "README.md"
keywords = [
    "terraform",
    "opentofu",
    "yaml",
    "infrastructure-as-code",
    "transpiler",
    "google-cloud",
    "infrastructure-discovery"
]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
hcl-rs = "0.19.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
serde_path_to_error = "0.1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
toml = "0.9"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time"] }
google-cloud-auth = "=1.5.0"
reqwest = { version = "0.13.1", features = ["json"] }
regex = "1.12"
google-cloud-asset-v1 = "1.4.0"
google-cloud-gax = "1.6.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
opt-level = "z"          # optimize for size (vs "s" which is slightly less aggressive)
lto = true               # full LTO — more effective than "thin" for size
codegen-units = 1        # single codegen unit enables better dead code elimination
strip = true             # strip symbols and debug info from the binary
panic = "abort"          # removes unwinding machinery (~50-100KB)

[workspace]
members = ["xtask"]
